(fix) O3-4663 :  Fix overlapping buttons in test orders section (#138)
* (fix) Fixed the styling of the buttons

* Update order details component styles for better layout and organization

* Swap actions for lab request results and reject lab request in routes configuration

* Refactor AddLabRequestResultsAction to include icon rendering and update styles for action buttons

* fixup

* fixup

* Update src/routes.json

---------

--- a/src/lab-tabs/actions/actions.scss
+++ b/src/lab-tabs/actions/actions.scss
@@ -8,6 +8,11 @@
   text-align: center;
   padding: 0 layout.$spacing-04;
   font-size: type.type-scale(2);
+  .actionButtonIcon {
+    margin-right: layout.$spacing-02;
+    color: white;
+    fill: white;
+  }
 }
 
 .actionRejectButton {
@@ -17,4 +22,5 @@
   text-align: center;
   padding: 0 layout.$spacing-04;
   font-size: type.type-scale(2);
+  border: none;
 }
